Fix up spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -147,7 +147,7 @@ button#view-sites {
   border-radius: 7px;
   max-width: 375px;
   outline: none;
-  margin-bottom: 80px; }
+  margin-bottom: 20px; }
 
 .overlay {
   width: 100%;
