--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -122,5 +122,5 @@ button#view-sites {
 	border-radius:7px;
 	max-width:375px;
 	outline:none;
-	margin-bottom:80px;
+	margin-bottom:20px;
 }
